--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <footer>
         <code>
-            Made by Saigirish 
+            Made by S@i girish
         </code>    
     </footer>
 </body>
